Changed WWW splash screen.

--- a/www/index.html
+++ b/www/index.html
@@ -1,1 +1,23 @@
-I-M-ALIVE
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>GroupStreamer.com</title>
+  <style type="text/css">
+    div#container {
+      width: 700px;
+      height: 550px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin: -275px 0 0 -350px;
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div id="container">
+    <img src="splash.png" />
+  </div>
+</body>
+</html>
